==> Nitrock28/Drone-Pilot/src/IMU.cpp <==
#include <mbed.h>
#include "IMU.h"

    void init(SPI* spi, DigitalOut* CSMPU, DigitalOut* CSBMP){
        _spi=spi;
        _selMPU=CSMPU;
        _selBMP=CSBMP;

        _spi->format(8,0);
        _spi->frequency(1000000);
        // readAddr[0] = 0x3B| READ_FLAG;
        // initial setup
        uint8_t MPU_Init_Data[16][2] = {
            {0x08, MPUREG_PWR_MGMT_1},     // Reset Device
            {0x30, MPUREG_USER_CTRL},       // I2C Master mode + I2C slave disable -> SPI (must do that quickly)
            {0x01, MPUREG_PWR_MGMT_1},     // Clock Source
            //{0b00000000,MPUREG_SMPLRT_DIV}, // full sample rate
            {BITS_DLPF_CFG_98HZ, MPUREG_CONFIG},         // Use DLPF set Gyroscope bandwidth 
            {0b00001000, MPUREG_GYRO_CONFIG},    // +-500dps
            {0b00001000, MPUREG_ACCEL_CONFIG},   // +-4G
            //{0b00000000, MPUREG_ACCEL_CONFIG_2}, // BW218 Hz

            {0x09, MPUREG_I2C_MST_CTRL},   // I2C Speed 500 kHz
            {0x81, MPUREG_I2C_MST_DELAY_CTRL}, //  slave 0 enable sample skip
            {0x09, MPUREG_I2C_SLV4_CTRL}, // in SLV4CONTROL is the general ext sample skip! 9 skip
            
            
            {0x0C, MPUREG_I2C_SLV0_ADDR},  //Set the I2C slave addres of AK8963 and set for write.
            //WRITE TO SLV0 REGISTER
            {0x0B, MPUREG_I2C_SLV0_REG}, //address : CNTL2
            {0x01, MPUREG_I2C_SLV0_DO}, // Reset AK8963
            {0x81, MPUREG_I2C_SLV0_CTRL},  //Enable I2C and set 1 byte

            {0x0A, MPUREG_I2C_SLV0_REG}, //address : CNTL1
            {0x12, MPUREG_I2C_SLV0_DO}, // measure at 8Hz in 16bit
            {0x81, MPUREG_I2C_SLV0_CTRL}  //Enable I2C and set 1 byte
        };

        for(int i=0; i<16; i++) {
            WriteReg(MPU_Init_Data[i][1], MPU_Init_Data[i][0],true);
            wait(0.001);  //let time for CS to go up and down between writes
        }
        // read magnetometer calib
        WriteReg(MPUREG_I2C_SLV0_ADDR,0x0C|READ_FLAG,true); //Set the I2C slave addres of AK8963 and set for read.
        wait(0.001);  //let time for CS to go up and down between writes
        WriteReg(MPUREG_I2C_SLV0_REG, 0x10,true); //I2C slave 0 register address from where to begin data transfer
        wait(0.001);  //let time for CS to go up and down between writes
        WriteReg(MPUREG_I2C_SLV0_CTRL, 0x83,true); //Read 3 bytes from the magnetometer
        wait(0.001); // wait for MPU to poll the slave
        uint8_t dataMagn[3];
        ReadRegs(MPUREG_EXT_SENS_DATA_00,dataMagn,3,true);
        // calibration factors
        for(int i = 0;i<3;i++){
            Magnetometer_ASA[i]=((float)dataMagn[i])*0.00390625+0.5;
        }
        
        // poll the magnetometer at the skipped FS rate, 
        wait(0.001);  //let time for CS to go up and down between writes
        WriteReg(MPUREG_I2C_SLV0_REG, 0x03,true); //I2C slave 0 register address from where to begin data transfer
        wait(0.001);  //let time for CS to go up and down between writes
        WriteReg(MPUREG_I2C_SLV0_CTRL, 0x87,true); //Read 7 bytes from the magnetometer (last is latch)
    }

    void calibrateSensor(DigitalOut* led){
        *led=0;
        int nmes=0;
        // store gyro data
        int32_t tol = 50;
        int32_t data[3];
        int32_t sum[3] = {0,0,0};
        int32_t lastRead[3] = {0,0,0};
        //reset offset
        for(int i=0;i<6;i++){
            WriteReg(19+i, 0x00,true);
            wait(0.001);  //let time for CS to go up and down between writes
        }
        
        while (nmes<200){
            //read only gyro data
            ReadRegs(0x43| READ_FLAG,dataIn,6,true);

            data[0]= __REVSH(*(int16_t*)(dataIn));
            data[1]= __REVSH(*(int16_t*)(dataIn+2));
            data[2]= __REVSH(*(int16_t*)(dataIn+4));
            if((lastRead[0]-data[0])<tol && (lastRead[0]-data[0])>-tol &&(lastRead[1]-data[1])<tol &&(lastRead[1]-data[1])>-tol &&(lastRead[2]-data[2])<tol &&(lastRead[2]-data[2])>-tol ){
                sum[0] +=data[0];
                sum[1] +=data[1];
                sum[2] +=data[2];
                
                nmes++;
            }
            else{
                *led=1;
                sum[0] =0;
                sum[1] =0;
                sum[2] =0;

                nmes=0;
                wait_ms(200);
                *led=0;
            }
            lastRead[0]=data[0];
            lastRead[1]=data[1];
            lastRead[2]=data[2];
            wait_ms(10);
        }

        *led=1;
        for(int i =0;i<3;i++){
            sum[i]=-(sum[i]/400);
            WriteReg(19+i*2, (uint8_t)((sum[i]>>8)&0x00FF),true);
            wait(0.001);  //let time for CS to go up and down between writes
            WriteReg(20+i*2, (uint8_t)(sum[i]&0x00FF),true);
            wait(0.001);  //let time for CS to go up and down between writes
        }

        lastUpdate=us_ticker_read();// initialize time interval with a non 0 value

    }
